# pyspark_data_pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
proof_of_concepts/: ingestion.py  processing.py
proof_of_concepts/data_load_scenarios/: incremental_load.ipynb
resources/: data_load_scenarios.xlsx
resources/full_load_sample_data/: customers.csv  customers_updated.csv
resources/incremental_load_sample_data/: orders.csv  orders_new.csv
resources/sample_data/: customers.csv  customers_full.csv  customers_incremental.csv
resources/users/: 20221201_100000.csv
src/: ingestion.py  main.py
src/dataset/schema_reader/: mysql_schema_reader.py
src/dataset/sink/: __init__.py  file_sink.py  hudi_sink.py  jdbc_sink.py
src/dataset/source/: __init__.py  file_source.py  hudi_source.py  jdbc_source.py  mysql_source.py
src/domain/: schema.py
tests/: jdbc_test.py  mysql_test.py
tests/proof_of_concepts/: ingestion.py  test.ipynb
tests/proof_of_concepts/data_load_scenarios/: full_load_overwrite.ipynb  incremental_load_with_history.ipynb  incremental_load_with_history_modified.ipynb  incremental_upsert_timeline.ipynb  output.json  results.ipynb  scd_type_2.ipynb  util.py
